@@ -4,7 +4,9 @@ IF(NOT CMAKE_ASM_COMPILE_OBJECT)
     SET(CMAKE_ASM_COMPILER_ARG1 "-f elf")
 
     IF(CMAKE_UNAME)
-      EXEC_PROGRAM(uname ARGS -m OUTPUT_VARIABLE CMAKE_SYSTEM_MACHINE)
+#FIXME: Check for defined CMAKE_SYSTEM_MACHINE
+#FIXME: cross-compilation?
+#EXEC_PROGRAM(uname ARGS -m OUTPUT_VARIABLE CMAKE_SYSTEM_MACHINE)
       IF(CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
         SET(CMAKE_ASM_COMPILER_ARG1 "-f elf64")
       ENDIF(CMAKE_SYSTEM_MACHINE MATCHES "x86_64")
@@ -25,5 +27,8 @@ ENDIF(NOT CMAKE_ASM_COMPILE_OBJECT)
 IF(NOT CMAKE_ASM_LINK_EXECUTABLE)
   SET(CMAKE_ASM_LINK_EXECUTABLE "")
 ENDIF(NOT CMAKE_ASM_LINK_EXECUTABLE)
+
+# work-aorund broken CMake versions
+SET(CMAKE_INCLUDE_FLAG_ASM "-I")
 
 SET(CMAKE_ASM_INFOMATION_LOADED 1)
