@@ -1,3 +1,8 @@
+2007-02-18  Prakash Punnoor <prakash@punnoor.de>
+
+	* admin/CMakeModules/CMakeASMInformation.cmake: sync to
+	aften version
+
 2006-11-01  Prakash Punnoor <prakash@punnoor.de>
 
 	* src/backends/alc_backend_darwin.c: make it compilable and
